[package]
name = "elekter"
description = "Tool for automatically taking actions based on electricity prices in Estonia"
authors = [ "Daniel Würsch" ]
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = [ "serde" ] }
chrono-tz = "0.10.4"
colored = "3.0.0"
humantime-serde = "1.1.1"
itertools = "0.14.0"
nonempty = { version = "0.12.0", features = ["serialize"] }
ordered-float = { version = "5.1.0", features = ["serde"] }
reqwest = { version = "0.12.23", features = [ "blocking", "json" ] }
serde = { version = "1.0.228", features = ["derive"] }
structopt = "0.3.26"
toml = "0.9.7"
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
